Animasi + Foto Row 2 Classmates

--- a/index.html
+++ b/index.html
@@ -355,8 +355,12 @@
     <div class="container">
       <div class="row text-center d-block d-sm-flex">
         <div class="col mb-3">
-          <div class="card bg-transparent">
-            <img src="/img/7.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/7.svg"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Dinda</h5>
               <p class="card-text">
@@ -376,8 +380,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/8.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/8.svg"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Dini</h5>
               <p class="card-text">
@@ -397,8 +405,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/9.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/9.svg"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Vemi</h5>
               <p class="card-text">
@@ -418,8 +430,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/10.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/10.svg"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Elona</h5>
               <p class="card-text">
@@ -439,8 +455,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/11.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/11.svg"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Fadhli</h5>
               <p class="card-text">
@@ -460,8 +480,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/12.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/12.svg"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Iga</h5>
               <p class="card-text">
