Animasi + Foto Row 3 Classmates

--- a/index.html
+++ b/index.html
@@ -511,8 +511,12 @@
     <div class="container">
       <div class="row text-center d-block d-sm-flex">
         <div class="col mb-3">
-          <div class="card bg-transparent">
-            <img src="/img/13.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/13.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Agung</h5>
               <p class="card-text">
@@ -532,8 +536,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/14.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/14.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Mayang</h5>
               <p class="card-text">
@@ -553,8 +561,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/15.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/15.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Atha</h5>
               <p class="card-text">
@@ -574,8 +586,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/16.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/16.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Iqbal</h5>
               <p class="card-text">
@@ -595,8 +611,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/17.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/17.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Raihan</h5>
               <p class="card-text">
@@ -616,8 +636,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/18.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/18.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Zacky</h5>
               <p class="card-text">
