Animasi + Foto Row 4 Classmates

--- a/index.html
+++ b/index.html
@@ -667,8 +667,12 @@
     <div class="container">
       <div class="row text-center d-block d-sm-flex">
         <div class="col mb-3">
-          <div class="card bg-transparent">
-            <img src="/img/19.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/19.svg"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Muthia</h5>
               <p class="card-text">
@@ -688,8 +692,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/20.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/20.svg"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Raden</h5>
               <p class="card-text">
@@ -709,8 +717,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/21.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/21.svg"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Reva</h5>
               <p class="card-text">
@@ -730,8 +742,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="img/sartek.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="img/sartek.png"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Satria</h5>
               <p class="card-text pt-1">
@@ -747,8 +763,12 @@
         <br />
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/22.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/22.svg"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Sintia</h5>
               <p class="card-text">
@@ -768,8 +788,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/23.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/23.svg"
+              class="card-img-top rotateKiri"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Siti</h5>
               <p class="card-text">
