Beneri Animasi Dikit

--- a/index.html
+++ b/index.html
@@ -307,8 +307,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent border-0 rotateKanan">
-            <img src="/img/5.svg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/5.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Danuar</h5>
               <p class="card-text">
@@ -328,8 +332,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent border-0 rotateKanan">
-            <img src="/img/6.svg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/6.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Diah</h5>
               <p class="card-text">
