Beneri Dikit (Lagi)

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                   target="_blank"
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
-                  title="Suka bilang bang"
+                  title="Suangar tenan rek"
                   >@hanifchanz__</a
                 >
               </p>
