--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
           <div class="col-md">
             <h2 class="putih">Contact Us</h2>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">
+              <li class="list-group-item bg-transparent putih border-0">
                 <i class="bi bi-instagram"></i>
                 <span class="fw-bold">Instagram</span>
                 <br />
@@ -844,7 +844,7 @@
                   >@oneca.studio</a
                 >
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item bg-transparent putih border-0">
                 <i class="bi bi-chat-right-text"></i>
                 <span class="fw-bold">Menfes</span>
                 <br />
@@ -858,7 +858,7 @@
                   >Send us a Message</a
                 >
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item bg-transparent putih">
                 <i class="bi bi-github"></i>
                 <span class="fw-bold">GitHub</span>
                 <br />
