--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                   href="https://www.instagram.com/hanifchanz__?igsh=bDgxMXhuZ2M0ZDJ6"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suangar tenan rek"
                   >@hanifchanz__</a
                 >
@@ -247,7 +247,7 @@
                   href="https://www.instagram.com/adeapriliasafitri?igsh=MXB0NHJ2ZG5wZG92eQ=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@adeapriliasafitri</a
                 >
@@ -272,7 +272,7 @@
                   href="https://www.instagram.com/akmckpp?igsh=MXM5Z2E5dTJlcXk1Nw=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Ganteng bnget gw jir"
                   >@akmckpp</a
                 >
@@ -297,7 +297,7 @@
                   href="https://www.instagram.com/arqyza?igsh=eWd5Y2FsOXM5ZXFz"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@arqyza</a
                 >
@@ -322,7 +322,7 @@
                   href="https://www.instagram.com/resantodanuar35?igsh=MWg2d3o5bmd0dWk2eQ=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@resantodanuar35</a
                 >
@@ -347,7 +347,7 @@
                   href="https://www.instagram.com/dip.tw?igsh=MXA1N2hmYnhmNmNyOQ=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@dip.tw</a
                 >
@@ -378,7 +378,7 @@
                   href="https://www.instagram.com/dinda_delaa?igsh=MXFpZjl3dnU3N3pldQ=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@dinda_delaa</a
                 >
@@ -403,7 +403,7 @@
                   href="https://www.instagram.com/scndchceee_?igsh=bTduMTcyam55czUw"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@scndchceee_</a
                 >
@@ -428,7 +428,7 @@
                   href="https://www.instagram.com/dwivemi_aryani?igsh=aWc3dW5uZ3l3bTB2"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@dwivemi_aryani</a
                 >
@@ -453,7 +453,7 @@
                   href="https://www.instagram.com/elonarsy?igsh=bWYxMjlneHFrb25h"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@elonarsy</a
                 >
@@ -478,7 +478,7 @@
                   href="https://www.instagram.com/fadh.36?igsh=dmNrM2ppNzJuZzht"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@fadh.36</a
                 >
@@ -503,7 +503,7 @@
                   href="https://www.instagram.com/iga.mwr?igsh=MWl2azJpamFhNWpudQ=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@iga.mwr</a
                 >
@@ -534,7 +534,7 @@
                   href="https://www.instagram.com/yogaa1.__?igsh=MnJ4ejR1Nnl4eGE2"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@yogaa1.__</a
                 >
@@ -559,7 +559,7 @@
                   href="https://www.instagram.com/myngptr.lrsti?igsh=MThiYWp3aGQ5MWZmbw=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@myngptr.lrsti</a
                 >
@@ -584,7 +584,7 @@
                   href="https://www.instagram.com/athamufidd?igsh=MW9obWIybDVibXBnOA=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@athamufidd</a
                 >
@@ -609,7 +609,7 @@
                   href="https://www.instagram.com/iqbalsyarief_?igsh=MWF3b2R6aDh6aGNnbw=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@iqbalsyarief_</a
                 >
@@ -634,7 +634,7 @@
                   href="https://www.instagram.com/karldenza?igsh=OXF0amgwb3dycGJh"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@karldenza</a
                 >
@@ -659,7 +659,7 @@
                   href="https://www.instagram.com/mhdzkyy05?igsh=dXhmYmRqMzhqMmFq"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@mhdzkyy05</a
                 >
@@ -690,7 +690,7 @@
                   href="https://www.instagram.com/muthi.aa0?igsh=bTYwNGdzbWFvNnRn"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@muthi.aa0</a
                 >
@@ -715,7 +715,7 @@
                   href="https://www.instagram.com/raiden_x420?igsh=ZnBlN2sxcmVtMnFv"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@raiden_x420</a
                 >
@@ -740,7 +740,7 @@
                   href="https://www.instagram.com/vaapriyani_?igsh=OXFzcDNhMTVjc2hu"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@vaapriyani_</a
                 >
@@ -786,7 +786,7 @@
                   href="https://www.instagram.com/sintiaacna_?igsh=MXFhYW84dTdneWRxcg=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@sintiaacna_</a
                 >
@@ -811,7 +811,7 @@
                   href="https://www.instagram.com/khodijah_caa?igsh=MXJyaDZ5YmVrMGk5Ng=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Suka bilang bang"
                   >@khodijah_caa</a
                 >
@@ -845,7 +845,7 @@
                 >
               </li>
               <li class="list-group-item bg-transparent putih border-0">
-                <i class="bi bi-chat-right-text"></i>
+                <i class="bi bi-chat-bottom-text"></i>
                 <span class="fw-bold">Menfes</span>
                 <br />
                 <a
