--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           <div class="card bg-transparent border-0">
             <img
               src="/img/3.svg"
-              class="card-img-top rotateHakim"
+              class="card-img-top rotateContactHakim"
               alt="penghuni 2CA"
             />
             <div class="card-body">
