--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           <div class="card bg-transparent border-0">
             <img
               src="/img/3.svg"
-              class="card-img-top rotateKanan"
+              class="card-img-top radenmuter"
               alt="penghuni 2CA"
             />
             <div class="card-body">
@@ -703,7 +703,7 @@
           <div class="card bg-transparent border-0">
             <img
               src="/img/20.svg"
-              class="card-img-top rotateKiri"
+              class="card-img-top radenmuter"
               alt="penghuni 2CA"
             />
             <div class="card-body">
