--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
               gets the whole class buzzing. Because in
               <em class="ungu">2CA</em>, it's not just about assignments and
               labs—it's also about laughter, little chaos, and the memories
-              we'll carry for a long time.
+              we'll carry for a long time.<br/>
+              <img src="img/fotbar.jpg" alt="fotbar">
             </p>
           </div>
         </div>
@@ -210,7 +211,7 @@
           <div class="card bg-transparent border-0">
             <img
               src="/img/1.svg"
-              class="card-img-top rotateKanan"
+              class="card-img-top radenmuter"
               alt="penghuni 2CA"
             />
             <div class="card-body">
@@ -703,7 +704,7 @@
           <div class="card bg-transparent border-0">
             <img
               src="/img/20.svg"
-              class="card-img-top rotateKiri"
+              class="card-img-top radenmuter"
               alt="penghuni 2CA"
             />
             <div class="card-body">
