Add Foto biar tidak kosong
Tolong bikin fotonyo jadi agak ke atas yeee, terimakasiii

--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
               <em class="ungu">2CA</em>, it's not just about assignments and
               labs—it's also about laughter, little chaos, and the memories
               we'll carry for a long time.<br/>
-              <img src="img/fotbar.jpg" alt="fotbar">
             </p>
           </div>
         </div>
@@ -198,6 +197,10 @@
           />
         </div>
       </div>
+       <div class="row">
+              <img class="fotbar img-fluid" src="img/fotbar001.jpg" alt="fotbarygy">
+              <img class="fotbar img-fluid" src="img/fotbar002.jpg" alt="fotbarygy2">
+        </div>
     </div>
     <br />
     <br />
