Add gambar di Footer dan benerin dikit

--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
           <div class="card bg-transparent border-0">
             <img
               src="img/sartek.png"
-              class="card-img-top rotateKiri"
+              class="card-img-top rotateContactHakim"
               alt="penghuni 2CA"
             />
             <div class="card-body">
@@ -830,7 +830,7 @@
     <!--CONTACT-->
     <section class="p-5" id="Contact">
       <div class="container">
-        <div class="row g-4 align-item-center">
+        <div class="row g-4 align-item-center text-center">
           <div class="col-md">
             <h2 class="putih">Contact Us</h2>
             <ul class="list-group list-group-flush">
@@ -849,8 +849,8 @@
                 >
               </li>
               <li class="list-group-item bg-transparent putih border-0">
-                <i class="bi bi-chat-bottom-text"></i>
-                <span class="fw-bold">Menfes</span>
+                <i class="bi bi-envelope-heart"></i>
+                <span class="fw-bold">Menfess</span>
                 <br />
                 <a
                   class="linkContact"
@@ -878,6 +878,11 @@
               </li>
             </ul>
           </div>
+            <div class="col-md">
+              <div class="card bg-transparent border-0">
+                    <img src="/img/CA'24.png" class="card-img-top" alt="gambarfooter">
+              </div>
+            </div>
         </div>
       </div>
     </section>
