--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               gets the whole class buzzing. Because in
               <em class="ungu">2CA</em>, it's not just about assignments and
               labs—it's also about laughter, little chaos, and the memories
-              we'll carry for a long time.<br/>
+              we'll carry for a long time.<br />
             </p>
           </div>
         </div>
@@ -194,10 +194,14 @@
           />
         </div>
       </div>
-       <div class="row">
-              <img class="fotbar img-fluid" src="img/fotbar001.jpg" alt="fotbarygy">
-              <img class="fotbar img-fluid" src="img/fotbar002.jpg" alt="fotbarygy2">
-        </div>
+      <div class="row">
+        <img class="fotbar img-fluid" src="img/fotbar001.jpg" alt="fotbarygy" />
+        <img
+          class="fotbar img-fluid"
+          src="img/fotbar002.jpg"
+          alt="fotbarygy2"
+        />
+      </div>
     </div>
     <br />
     <br />
@@ -875,11 +879,15 @@
               </li>
             </ul>
           </div>
-            <div class="col-md">
-              <div class="card bg-transparent border-0">
-                    <img src="/img/CA'24.png" class="card-img-top" alt="gambarfooter">
-              </div>
+          <div class="col-md">
+            <div class="card bg-transparent border-0">
+              <img
+                src="/img/CA'24.png"
+                class="card-img-top"
+                alt="gambarfooter"
+              />
             </div>
+          </div>
         </div>
       </div>
     </section>
