Benerin fotbar di about

--- a/index.html
+++ b/index.html
@@ -183,7 +183,20 @@
               <em class="ungu">2CA</em>, it's not just about assignments and
               labs—it's also about laughter, little chaos, and the memories
               we'll carry for a long time.<br />
+              <br />
             </p>
+            <div class="d-flex jarakFotbar">
+              <img
+                class="fotbar img-fluid w-50 rounded shadow"
+                src="img/fotbar001.jpg"
+                alt="fotbarygy"
+              />
+              <img
+                class="fotbar img-fluid w-50 rounded shadow"
+                src="img/fotbar002.jpg"
+                alt="fotbarygy2"
+              />
+            </div>
           </div>
         </div>
         <div class="col-md-6">
@@ -193,14 +206,6 @@
             alt="Foto Sekelas"
           />
         </div>
-      </div>
-      <div class="row">
-        <img class="fotbar img-fluid" src="img/fotbar001.jpg" alt="fotbarygy" />
-        <img
-          class="fotbar img-fluid"
-          src="img/fotbar002.jpg"
-          alt="fotbarygy2"
-        />
       </div>
     </div>
     <br />
