--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <div class="card bg-transparent border-0">
             <img
               src="/img/1.svg"
-              class="card-img-top radenmuter"
+              class="card-img-top rotateHanif"
               alt="penghuni 2CA"
             />
             <div class="card-body">
@@ -849,7 +849,7 @@
                   href="https://www.instagram.com/oneca.studio?igsh=MTlxa3p4bGFwMmU5Ng=="
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="Like And Follow!"
                   >@oneca.studio</a
                 >
@@ -863,7 +863,7 @@
                   href="menfes"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="DO IT!"
                   >Send us a Message</a
                 >
@@ -877,7 +877,7 @@
                   class="linkContact"
                   target="_blank"
                   data-bs-toggle="tooltip"
-                  data-bs-placement="right"
+                  data-bs-placement="bottom"
                   title="See This Web Source Code!"
                   >Lolzonexd/Projek-UAS-Web</a
                 >
