--- a/index.html
+++ b/index.html
@@ -214,7 +214,12 @@
     <!--CLASSMATES-->
     <!-- ENJOY QEY 200 LINE WKWKWKWK -->
     <!-- ROW 1 -->
-    <div class="container" id="classmates">
+    <div class="container pt-5" id="classmates">
+      <br />
+      <h1 class="text-center putih">
+        <span class="ungu">CA'24</span> CLASSMATES
+      </h1>
+      <br />
       <div class="row text-center d-block d-sm-flex">
         <div class="col mb-3">
           <div class="card bg-transparent border-0">
@@ -771,6 +776,7 @@
               <p class="card-text pt-1">
                 <a
                   href="https://youtu.be/dQw4w9WgXcQ?si=ZZBWndNCL03iMqkz"
+                  target="_blank"
                   class="linkContact"
                   >AKU KAYA</a
                 >
@@ -888,7 +894,7 @@
             <div class="card bg-transparent border-0">
               <img
                 src="/img/CA'24.png"
-                class="card-img-top"
+                class="card-img-top img-fluid"
                 alt="gambarfooter"
               />
             </div>
