--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
     <!-- HOME -->
     <section class="pt-5 container home header" id="home">
+      <br />
       <div class="home">
         <h1 class="text-center">
           <span class="ungu">WELCOME</span> <span class="putih">TO</span>
@@ -149,9 +150,13 @@
         </div>
       </div>
     </section>
+    <br />
+    <br />
 
     <!--BAGIAN BOX ABOUT-->
     <div class="container pt-5" id="about">
+      <br />
+      <h1 class="text-center putih">ABOUT <span class="ungu">CA'24</span></h1>
       <div class="row">
         <div class="col-md-6">
           <div class="p-4 borderUngu rounded shadow bg-transparent putih">
