--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                   target="_blank"
                   data-bs-toggle="tooltip"
                   data-bs-placement="bottom"
-                  title="Suka bilang bang"
+                  title="Hormat Ketua"
                   >@arqyza</a
                 >
               </p>
@@ -368,7 +368,7 @@
                   target="_blank"
                   data-bs-toggle="tooltip"
                   data-bs-placement="bottom"
-                  title="Suka bilang bang"
+                  title="Zoro suamiku <3"
                   >@dip.tw</a
                 >
               </p>
@@ -736,7 +736,7 @@
                   target="_blank"
                   data-bs-toggle="tooltip"
                   data-bs-placement="bottom"
-                  title="Suka bilang bang"
+                  title="Aku budak man 3"
                   >@raiden_x420</a
                 >
               </p>
