Ready for hostinggg

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     />
 
     <!-- LINK CUSTOM CSS -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- LINK FAVICON -->
-    <link rel="shortcut icon" href="/img/Favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon" />
 
     <!-- LINK BOOSTRAP ICON -->
     <link
@@ -37,7 +37,7 @@
     />
 
     <!-- LINK REPO GITHUB -->
-    <!-- <base href="/Projek-UAS-Web/"> -->
+    <base href="/Projek-UAS-Web/">
     <title>Projek UAS</title>
   </head>
   <body class="unguGelap">
@@ -49,7 +49,7 @@
       <div class="container-fluid">
         <!--NAVBAR BRAND (LOGO)-->
         <a class="navbar-brand border-bottom" href="#"
-          ><img src="/img/CA'24.png" alt="Logo CA" width="90" height="30"
+          ><img src="img/CA'24.png" alt="Logo CA" width="90" height="30"
         /></a>
 
         <!--HAMBURGER NAVBAR-->
@@ -107,7 +107,7 @@
           <div class="col">
             <div class="card bg-transparent borderUngu rotateKanan">
               <img
-                src="/img/Ganteng.JPG"
+                src="img/Ganteng.JPG"
                 class="card-img-top"
                 alt="Foto Ganteng"
               />
@@ -120,7 +120,7 @@
           <br />
           <div class="col">
             <div class="card bg-transparent borderUngu rotateKanan">
-              <img src="/img/Diah.JPG" class="card-img-top" alt="Foto Diah" />
+              <img src="img/Diah.JPG" class="card-img-top" alt="Foto Diah" />
               <div class="card-body">
                 <h5 class="card-title putih">Diah Pratwa</h5>
                 <p class="card-text putih">Admin jg</p>
@@ -130,7 +130,7 @@
           <br />
           <div class="col">
             <div class="card bg-transparent borderUngu rotateKanan">
-              <img src="/img/Qey.JPG" class="card-img-top" alt="Foto Qey" />
+              <img src="img/Qey.JPG" class="card-img-top" alt="Foto Qey" />
               <div class="card-body">
                 <h5 class="card-title putih">Nayla</h5>
                 <p class="card-text putih">Admin admin</p>
@@ -140,7 +140,7 @@
           <br />
           <div class="col">
             <div class="card bg-transparent borderUngu rotateHakim">
-              <img src="/img/Al.JPG" class="card-img-top" alt="Foto Hakim" />
+              <img src="img/Al.JPG" class="card-img-top" alt="Foto Hakim" />
               <div class="card-body">
                 <h5 class="card-title teksHakim putih">Kimbap</h5>
                 <p class="card-text teksHakim putih">Beban</p>
@@ -207,7 +207,7 @@
         <div class="col-md-6">
           <img
             class="fotosekelas img-fluid d-block d-sm-flex rounded shadow borderUngu"
-            src="/img/1CA.JPG"
+            src="img/1CA.JPG"
             alt="Foto Sekelas"
           />
         </div>
@@ -229,7 +229,7 @@
         <div class="col mb-3">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/1.svg"
+              src="img/1.svg"
               class="card-img-top rotateHanif"
               alt="penghuni 2CA"
             />
@@ -254,7 +254,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/2.svg"
+              src="img/2.svg"
               class="card-img-top rotateKanan"
               alt="penghuni 2CA"
             />
@@ -279,7 +279,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/3.svg"
+              src="img/3.svg"
               class="card-img-top rotateContactHakim"
               alt="penghuni 2CA"
             />
@@ -304,7 +304,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/4.svg"
+              src="img/4.svg"
               class="card-img-top rotateKanan"
               alt="penghuni 2CA"
             />
@@ -329,7 +329,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/5.svg"
+              src="img/5.svg"
               class="card-img-top rotateKanan"
               alt="penghuni 2CA"
             />
@@ -354,7 +354,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/6.svg"
+              src="img/6.svg"
               class="card-img-top rotateKanan"
               alt="penghuni 2CA"
             />
@@ -385,7 +385,7 @@
         <div class="col mb-3">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/7.svg"
+              src="img/7.svg"
               class="card-img-top rotateKiri"
               alt="penghuni 2CA"
             />
@@ -410,7 +410,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/8.svg"
+              src="img/8.svg"
               class="card-img-top rotateKiri"
               alt="penghuni 2CA"
             />
@@ -435,7 +435,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/9.svg"
+              src="img/9.svg"
               class="card-img-top rotateKiri"
               alt="penghuni 2CA"
             />
@@ -460,7 +460,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/10.svg"
+              src="img/10.svg"
               class="card-img-top rotateKiri"
               alt="penghuni 2CA"
             />
@@ -485,7 +485,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/11.svg"
+              src="img/11.svg"
               class="card-img-top rotateKiri"
               alt="penghuni 2CA"
             />
@@ -510,7 +510,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/12.svg"
+              src="img/12.svg"
               class="card-img-top rotateKiri"
               alt="penghuni 2CA"
             />
@@ -541,7 +541,7 @@
         <div class="col mb-3">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/13.svg"
+              src="img/13.svg"
               class="card-img-top rotateKanan"
               alt="penghuni 2CA"
             />
@@ -566,7 +566,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/14.svg"
+              src="img/14.svg"
               class="card-img-top rotateKanan"
               alt="penghuni 2CA"
             />
@@ -591,7 +591,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/15.svg"
+              src="img/15.svg"
               class="card-img-top rotateKanan"
               alt="penghuni 2CA"
             />
@@ -616,7 +616,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/16.svg"
+              src="img/16.svg"
               class="card-img-top rotateKanan"
               alt="penghuni 2CA"
             />
@@ -641,7 +641,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/17.svg"
+              src="img/17.svg"
               class="card-img-top rotateKanan"
               alt="penghuni 2CA"
             />
@@ -666,7 +666,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/18.svg"
+              src="img/18.svg"
               class="card-img-top rotateKanan"
               alt="penghuni 2CA"
             />
@@ -697,7 +697,7 @@
         <div class="col mb-3">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/19.svg"
+              src="img/19.svg"
               class="card-img-top rotateKiri"
               alt="penghuni 2CA"
             />
@@ -722,7 +722,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/20.svg"
+              src="img/20.svg"
               class="card-img-top radenmuter"
               alt="penghuni 2CA"
             />
@@ -747,7 +747,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/21.svg"
+              src="img/21.svg"
               class="card-img-top rotateKiri"
               alt="penghuni 2CA"
             />
@@ -794,7 +794,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/22.svg"
+              src="img/22.svg"
               class="card-img-top rotateKiri"
               alt="penghuni 2CA"
             />
@@ -819,7 +819,7 @@
         <div class="col">
           <div class="card bg-transparent border-0">
             <img
-              src="/img/23.svg"
+              src="img/23.svg"
               class="card-img-top rotateKiri"
               alt="penghuni 2CA"
             />
@@ -898,7 +898,7 @@
           <div class="col-md">
             <div class="card bg-transparent border-0">
               <img
-                src="/img/CA'24.png"
+                src="img/CA'24.png"
                 class="card-img-top img-fluid"
                 alt="gambarfooter"
               />
