--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- LINK FAVICON -->
-    <link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 
     <!-- LINK BOOSTRAP ICON -->
     <link
