--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
                 <br />
                 <a
                   class="linkContact"
-                  href="menfes"
+                  href="https://ngl.link/oneca.studio2"
                   target="_blank"
                   data-bs-toggle="tooltip"
                   data-bs-placement="bottom"
